--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "generate-quiz-data": "node src/scripts/preprocess.js"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.17",
+    "@google/generative-ai": "^0.24.1",
+    "dotenv": "^16.5.0",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
